Fix flex wrap and a nesting

--- a/scss/_newsFront.scss
+++ b/scss/_newsFront.scss
@@ -54,6 +54,7 @@
 
   .flex {
     display: flex;
+		flex-flow: row wrap;
     max-width: 800px;
   }
 
